Removed EditBuffer from the Clac code base; it has been replaced with std::string.

--- a/clac_engine/Makefile
+++ b/clac_engine/Makefile
@@ -8,7 +8,6 @@ LLVMLINK=llvm-link
 LLVMLINKFLAGS=
 SOURCES=actions.cpp    \
 	cstack.cpp     \
-	EditBuffer.cpp \
 	get.cpp        \
 	global.cpp     \
 	words.cpp      \
@@ -25,33 +24,30 @@ $(LIBRARY):	$(OBJECTS)
 # File Dependencies
 ###################
 
-# Module dependencies -- Produced with 'depend' on Sat Jul  6 08:44:41 2013
+# Module dependencies -- Produced with 'depend' on Sat Sep 28 08:19:29 2013
 
 
-actions.bc:	actions.cpp ../clac_entity/BinaryEntity.hpp ../clac_entity/Entity.hpp ../clac_entity/ComplexEntity.hpp \
+actions.o:	actions.cpp ../clac_entity/BinaryEntity.hpp ../clac_entity/Entity.hpp ../clac_entity/ComplexEntity.hpp \
 	../clac_entity/FloatEntity.hpp ../clac_entity/IntegerEntity.hpp ../clac_entity/VeryLong.hpp \
 	../clac_entity/ListEntity.hpp ../clac_entity/MatrixEntity.hpp ../clac_entity/RationalEntity.hpp \
 	../clac_entity/Rational.hpp ../clac_entity/StringEntity.hpp actions.hpp cstack.hpp global.hpp \
 	WordStream.hpp ../clac_entity/support.hpp 
 
-cstack.bc:	cstack.cpp cstack.hpp ../clac_entity/Entity.hpp ../clac_entity/VeryLong.hpp ../clac_entity/support.hpp \
+cstack.o:	cstack.cpp cstack.hpp ../clac_entity/Entity.hpp ../clac_entity/VeryLong.hpp ../clac_entity/support.hpp \
 	
 
-EditBuffer.bc:	EditBuffer.cpp EditBuffer.hpp 
-
-get.bc:	get.cpp ../clac_entity/Rational.hpp ../clac_entity/BinaryEntity.hpp ../clac_entity/Entity.hpp \
+get.o:	get.cpp ../clac_entity/Rational.hpp ../clac_entity/BinaryEntity.hpp ../clac_entity/Entity.hpp \
 	../clac_entity/ComplexEntity.hpp ../clac_entity/FloatEntity.hpp ../clac_entity/IntegerEntity.hpp \
 	../clac_entity/VeryLong.hpp ../clac_entity/LabeledEntity.hpp ../clac_entity/ListEntity.hpp \
 	../clac_entity/MatrixEntity.hpp ../clac_entity/RationalEntity.hpp ../clac_entity/StringEntity.hpp \
-	../clac_entity/support.hpp EditBuffer.hpp get.hpp WordStream.hpp global.hpp cstack.hpp words.hpp \
-	
+	../clac_entity/support.hpp get.hpp WordStream.hpp global.hpp cstack.hpp words.hpp 
 
-global.bc:	global.cpp global.hpp ../clac_entity/VeryLong.hpp cstack.hpp ../clac_entity/Entity.hpp \
+global.o:	global.cpp global.hpp ../clac_entity/VeryLong.hpp cstack.hpp ../clac_entity/Entity.hpp \
 	WordStream.hpp 
 
-words.bc:	words.cpp words.hpp 
+words.o:	words.cpp words.hpp 
 
-WordStream.bc:	WordStream.cpp WordStream.hpp 
+WordStream.o:	WordStream.cpp WordStream.hpp 
 
 
 # Additional Rules
