--- a/clac.cbp
+++ b/clac.cbp
@@ -4,13 +4,13 @@
 	<Project>
 		<Option title="clac" />
 		<Option pch_mode="2" />
-		<Option compiler="clang" />
+		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/clac" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
-				<Option compiler="clang" />
+				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -24,7 +24,7 @@
 				<Option output="bin/Release/clac" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
-				<Option compiler="clang" />
+				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
@@ -37,6 +37,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++0x" />
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 			<Add directory="clac_entity" />
@@ -46,8 +47,8 @@
 		<Linker>
 			<Add library="ncurses" />
 		</Linker>
-		<Unit filename="CommandWindow.cpp" />
-		<Unit filename="CommandWindow.hpp" />
+		<Unit filename="ClacCommandWindow.cpp" />
+		<Unit filename="ClacCommandWindow.hpp" />
 		<Unit filename="DirectoryWindow.cpp" />
 		<Unit filename="DirectoryWindow.hpp" />
 		<Unit filename="StackWindow.cpp" />
