--- a/clac_entity/clac_entity.cbp
+++ b/clac_entity/clac_entity.cbp
@@ -4,14 +4,14 @@
 	<Project>
 		<Option title="clac_entity" />
 		<Option pch_mode="2" />
-		<Option compiler="clang" />
+		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/libclac_entity" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
-				<Option compiler="clang" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-Wall" />
@@ -23,7 +23,7 @@
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
-				<Option compiler="clang" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-Wall" />
@@ -34,6 +34,9 @@
 				</Linker>
 			</Target>
 		</Build>
+		<Compiler>
+			<Add option="-std=c++0x" />
+		</Compiler>
 		<Unit filename="BinaryEntity.cpp" />
 		<Unit filename="BinaryEntity.hpp" />
 		<Unit filename="ComplexEntity.cpp" />
