--- a/clac.vcxproj
+++ b/clac.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -177,13 +177,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="clac.cpp" />
-    <ClCompile Include="CommandWindow.cpp" />
+    <ClCompile Include="ClacCommandWindow.cpp" />
     <ClCompile Include="DirectoryWindow.cpp" />
     <ClCompile Include="record_f.cpp" />
     <ClCompile Include="StackWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CommandWindow.hpp" />
+    <ClInclude Include="ClacCommandWindow.hpp" />
     <ClInclude Include="DirectoryWindow.hpp" />
     <ClInclude Include="record_f.h" />
     <ClInclude Include="StackWindow.hpp" />
